--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: duhigure
-          image: duhigure:prod
+          image: duhigure:v2
           imagePullPolicy: Never
           ports:
             - containerPort: 8080
