--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: duhigure-service
+  name: duhigure-service-v2
 spec:
   type: NodePort
   selector:
@@ -9,4 +9,4 @@ spec:
   ports:
     - port: 3000
       targetPort: 3000
-      nodePort: 30090
+      nodePort: 30091
